--- a/index.html
+++ b/index.html
@@ -124,31 +124,97 @@
           <div class="col-sm-1 hidden-xs"></div>
           <div class="col-sm-5 text-center">
             <h3>Saturday, Jan. 14</h3>
-            <ul class="list-unstyled">
-              <li><b>10:00 AM</b> - Mentor/Sponsors Check In</li>
-              <li><b>10:30 AM</b> - Hacker Check In</li>
-              <li><b>11:30 AM</b> - Opening Ceremony </li>
-              <li><b>12:00 PM</b> - Hacking Starts</li>
-              <li><b>12:00 PM</b> - Team-mixer</li>
-              <li><b>12:00 PM</b> - Lunch</li>
-              <li><b>1:00 PM</b> - Intro to iOS Workshop</li>
-              <li><b>2:00 PM</b> - Intermediate iOS Workshop</li>
-              <li><b>3:00 PM</b> - Intro to Git Workshop</li>
-              <li><b>6:30 PM</b> - Dinner</li>
-            </ul>
+            <table class="table table-condensed">
+              <tbody>
+                <tr>
+                  <td>10:00 AM</td>
+                  <td>Mentor/Sponsors Check In</td>
+                </tr>
+                <tr>
+                  <td>10:30 AM</td>
+                  <td>Hacker Check In</td>
+                </tr>
+                <tr>
+                  <td>11:15 AM</td>
+                  <td>Opening Ceremony</td>
+                </tr>
+                <tr>
+                  <td>12:00 PM</td>
+                  <td>Hacking Starts</td>
+                </tr>
+                <tr>
+                  <td>12:00 PM</td>
+                  <td>Team Mixer</td>
+                </tr>
+                <tr>
+                  <td>12:00 PM</td>
+                  <td>Lunch</td>
+                </tr>
+                <tr>
+                  <td>1:00 PM</td>
+                  <td>Intro to iOS Workshop</td>
+                </tr>
+                <tr>
+                  <td>2:00 PM</td>
+                  <td>Intermediate iOS Workshop</td>
+                </tr>
+                <tr>
+                  <td>2:00 PM</td>
+                  <td>Particle Workshop</td>
+                </tr>
+                <tr>
+                  <td>3:00 PM</td>
+                  <td>Intro to Git Workshop</td>
+                </tr>
+                <tr>
+                  <td>6:30 PM</td>
+                  <td>Dinner</td>
+                </tr>
+                <tr>
+                  <td>9:00 PM</td>
+                  <td>Cup Stacking Tournament</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <div class="col-sm-5 text-center">
             <h3>Sunday, Jan. 15</h3>
-            <ul class="list-unstyled">
-              <li><b>12:00 AM</b> - Midnight Snack</li>
-              <li><b>8:00 AM</b> - Breakfast </li>
-              <li><b>9:00 AM</b> — Realtime Data Visualization Workshop</li>
-              <li><b>11AM to 12 PM</b> - Submissions</li>
-              <li><b>12:00 PM</b> - Hacking Ends</li>
-              <li><b>12:00 PM</b> - Lunch </li>
-              <li><b>12:30 PM to 1:15 PM</b> - Judging Expo</li>
-              <li><b>1:45 PM</b> - Closing Ceremony</li>
-            </ul>
+            <table class="table table-condensed">
+              <tbody>
+                <tr>
+                  <td>12:00 AM</td>
+                  <td>Midnight Snack</td>
+                </tr>
+                <tr>
+                  <td>8:00 AM</td>
+                  <td>Breakfast</td>
+                </tr>
+                <tr>
+                  <td>9:00 AM</td>
+                  <td>Realtime Data Visualization Workshop</td>
+                </tr>
+                <tr>
+                  <td>11:00 AM - 12:00 PM</td>
+                  <td><a href="https://smhacks.devpost.com/">Project Submissions</a></td>
+                </tr>
+                <tr>
+                  <td>12:00 PM</td>
+                  <td>Hacking Ends</td>
+                </tr>
+                <tr>
+                  <td>12:00 PM</td>
+                  <td>Lunch</td>
+                </tr>
+                <tr>
+                  <td>12:30 PM - 1:15 PM</td>
+                  <td>Judging and Demos</td>
+                </tr>
+                <tr>
+                  <td>1:45 PM</td>
+                  <td>Closing Ceremony</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
@@ -180,7 +246,7 @@
         <div class="row text-center text-center">
           <div class="col-sm-4"><a href="http://justinmind.com" target="_blank"><img src="justinmind.png" id="justinmind" class="sp"></a></div>
           <div class="col-sm-4"><a href="http://mitlaunch.com/" target="_blank"><img src="mit-launch.png" id="mit-launch" class="sp"></a></div>
-          <div class="col-sm-4"><a href="http://mlworks.com" target="_blank"><img src="mlw.png" id="mlw" class="sp"></a></div>
+          <div class="col-sm-4"><a href="http://upsurf.com" target="_blank"><img src="upsurf.png" id="upsurf" class="sp"></a></div>
         </div><br><br><br><br>
         <div class="row text-center text-center">
           <div class="col-sm-4"><a href="http://balsamiq.com/" target="_blank"><img src="balsamiq.png" id="balsamiq" class="sp"></a></div>
@@ -197,7 +263,12 @@
           <div class="col-md-3 col-sm-6"><a href="http://lattice-engines.com/" target="_blank"><img src="lattice.png" id="lattice" class="sp"></a></div>
           <div class="col-md-3 col-sm-6"><a href="http://a16z.com/" target="_blank"><img src="a16z.png" id="a16z" class="sp"></a></div>
           <div class="col-md-3 col-sm-6"><a href="http://get.tech/" target="_blank"><img src="tech.png" id="tech" class="sp"></a></div>
-        </div><br><br><br>
+        </div><br><br>
+        <div class="row text-center">
+          <div class="col-md-3 col-sm-6"></div>
+          <div class="col-md-3 col-sm-6"><a href="https://www.stickermule.com/" target="_blank"><img src="stickermule.png" id="stickermule" class="sp"></a></div>
+          <div class="col-md-3 col-sm-6"><a href="https://www.particle.io/" target="_blank"><img src="particle.png" id="particle" class="sp"></a></div>
+        </div><br>
         <h2 class="text-center">Partners</h2>
         <div class="row text-center">
           <div class="col-sm-4 col-sm-4"><a href="https://hackclub.com" target="_blank"><img src="hackclub.png" id="hackclub" class="sp"></a></div>
