--- a/index.html
+++ b/index.html
@@ -237,11 +237,15 @@
         </div><br><br>
         <div class="row text-center text-center">
           <div class="col-sm-6"><a href="http://www.brandmakers.com/" target="_blank"><img src="brandmakers.png" id="brandmakers" class="sp"></a></div>
-          <div class="col-sm-6"><a href="https://ibm.com/" target="_blank"><img src="ibm.png" id="ibm" class="sp"></a><br><small style="font-size:8px">IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.</small></div>
+          <div class="col-sm-6"><a href="https://skillflow.io/" target="_blank"><img src="skillflow.png" id="skillflow"></a></div>
         </div><br><br>
         <div class="row text-center text-center">
           <div class="col-sm-6"><a href="https://www.pubnub.com/" target="_blank"><img src="pubnub.png" id="pubnub" class="sp"></a></div>
           <div class="col-sm-6"><a href="https://www.twilio.com/" target="_blank"><img src="twilio.png" id="twilio" class="sp"></a></div>
+        </div><br><br>
+        <div class="row tex-center text-center">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-6"><a href="https://ibm.com/" target="_blank"><img src="ibm.png" id="ibm" class="sp"></a><br><small style="font-size:8px">IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.</small></div>
         </div><br><br>
         <div class="row text-center text-center">
           <div class="col-sm-4"><a href="http://justinmind.com" target="_blank"><img src="justinmind.png" id="justinmind" class="sp"></a></div>
