--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -151,8 +152,8 @@
                   <td>Lunch</td>
                 </tr>
                 <tr>
-                  <td>1:00 PM</td>
-                  <td>Intro to iOS Workshop</td>
+                  <td>12:30 PM</td>
+                  <td>Intro to Programming Workshop</td>
                 </tr>
                 <tr>
                   <td>2:00 PM</td>
