Cindy updated her profile picture

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -51,6 +50,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#faq">FAQ</a></li>
           <li><a href="#schedule">Schedule</a></li>
+          <!-- li: a(href='#judges') Judges-->
+          <li><a href="#prizes">Prizes</a></li>
           <li><a href="#sponsors">Sponsors / Partners</a></li>
           <li><a href="#team">Team</a></li>
         </ul>
@@ -157,15 +158,27 @@
                 </tr>
                 <tr>
                   <td>2:00 PM</td>
-                  <td>Intermediate iOS Workshop</td>
+                  <td>Intro to Web Development Workshop</td>
                 </tr>
                 <tr>
                   <td>2:00 PM</td>
-                  <td>Particle Workshop</td>
+                  <td>Intermediate iOS Workshop</td>
                 </tr>
                 <tr>
                   <td>3:00 PM</td>
                   <td>Intro to Git Workshop</td>
+                </tr>
+                <tr>
+                  <td>4:00 PM</td>
+                  <td>Particle.io Workshop</td>
+                </tr>
+                <tr>
+                  <td>4:00 PM</td>
+                  <td>Realtime Data Visualization Workshop</td>
+                </tr>
+                <tr>
+                  <td>5:00 PM</td>
+                  <td>Scenera Workshop</td>
                 </tr>
                 <tr>
                   <td>6:30 PM</td>
@@ -191,10 +204,6 @@
                   <td>Breakfast</td>
                 </tr>
                 <tr>
-                  <td>9:00 AM</td>
-                  <td>Realtime Data Visualization Workshop</td>
-                </tr>
-                <tr>
                   <td>11:00 AM - 12:00 PM</td>
                   <td><a href="https://smhacks.devpost.com/">Project Submissions</a></td>
                 </tr>
@@ -216,6 +225,101 @@
                 </tr>
               </tbody>
             </table>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- #judges.content
+    .container
+      h2.text-center Judges
+      .row.text-center
+        .col-sm-4
+          .judge
+            img.img-responsive.img-circle(src='zach-latta.jpeg')
+            .name Zach Latta
+            .role Executive Director, Hack Club
+        .col-sm-4
+          .judge
+            img.img-responsive.img-circle(src='tom.png')
+            .name Tom Preston-Werner
+            .role Co-Founder, Github
+        .col-sm-4
+          .judge
+            img.img-responsive.img-circle(src='maegan.jpeg')
+            .name Maegan Clawges
+            .role Software Engineer, YouTube
+      br
+      br
+      br
+      .row.text-center
+        .col-sm-4
+          .judge
+            img.img-responsive.img-circle(src='claire.jpeg')
+            .name Claire Wang
+            .role Student, Cornell University
+        .col-sm-4
+          .judge
+            img.img-responsive.img-circle(src='')
+            .name Michael Huang
+            .role Software Engineer, Uber
+        .col-sm-4
+          .judge
+            img.img-responsive.img-circle(src='lizzie.jpg')
+            .name Lizzie Siegle
+            .role Student, Bryn Mawr College
+    -->
+    <div id="prizes" class="content">
+      <div class="container">
+        <h2 class="text-center">Prizes</h2>
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <p class="lead">We will be announcing our full list of prizes soon!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <h3>1st Place</h3>
+            <p>GoPro - HERO Session HD and a <a href="https://www.justinmind.com/">Justinmind</a> perpetual license, one for each team member.</p>
+          </div>
+          <div class="col-sm-4">
+            <h3>2nd Place</h3>
+            <p>Bose Soundlink Color Bluetooth Speaker and a <a href="https://www.justinmind.com/">Justinmind</a> perpetual license, one for each team member.</p>
+          </div>
+          <div class="col-sm-4">
+            <h3>3rd Place</h3>
+            <p>Syma X5C Explorers 2.4Ghz 6-Axis Gyro RC quadcopter Drone w/ 2MP HD Camera, one for each team member.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <h3>Best iOS App</h3>
+            <p>Google Chromecast and Amazon Echo Dot, one for each team member.</p>
+          </div>
+          <div class="col-sm-4">
+            <h3>Best Android App</h3>
+            <p>Partial scholarship to Make School Summer Academy, Particle Kit and Amazon Echo Dot, one for each team member.</p>
+          </div>
+          <div class="col-sm-4">
+            <h3>Best .tech Domain Name</h3>
+            <p>$50 Amazon gift card, one for each team member. </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-4">
+            <h3>Best with Wolfram Tech</h3>
+            <p>1 year of <a href="http://www.wolfram.com/development-platform">Wolfram Development Platform</a>, 1 year of <a href="http://www.wolfram.com/solutions/education/students">Wolfram Mathematica Student Edition</a> and 1 year of <a href="http://www.wolframalpha.com/pro/">Wolfram|Alpha Pro</a>, one for each team member. Two teams can win this award.</p>
+          </div>
+          <!-- .col-sm-4
+          h3 Top 10 Teams
+          p 1 year subscription to <a href="http://www.wolframalpha.com/pro/">Wolfram|Alpha Pro</a>, one for each team member. Winners of the Best with Wolfram Tech Award are not eligible for this award.
+          -->
+          <div class="col-sm-4">
+            <h3>Raffle Prizes</h3>
+            <p>One iPad Mini 4, one Roku 3 Streaming Player and two Justinmind perpetual licenses.</p>
+          </div>
+          <div class="col-sm-4">
+            <h1>$8,165</h1>
+            <p id="cash">Total cash value of prizes</p>
           </div>
         </div>
       </div>
