--- a/index.html
+++ b/index.html
@@ -170,16 +170,20 @@
                   <td>Intro to Git Workshop</td>
                 </tr>
                 <tr>
+                  <td>3:30 PM</td>
+                  <td>Realtime Data Visualization Workshop</td>
+                </tr>
+                <tr>
                   <td>4:00 PM</td>
                   <td>Particle.io Workshop</td>
                 </tr>
                 <tr>
-                  <td>4:00 PM</td>
-                  <td>Realtime Data Visualization Workshop</td>
+                  <td>5:00 PM</td>
+                  <td>Scenera Workshop</td>
                 </tr>
                 <tr>
                   <td>5:00 PM</td>
-                  <td>Scenera Workshop</td>
+                  <td>Data Visualization with JavaScript Workshop</td>
                 </tr>
                 <tr>
                   <td>6:30 PM</td>
@@ -303,11 +307,11 @@
           </div>
           <div class="col-sm-4">
             <h3>2nd Place</h3>
-            <p>Bose Soundlink Color Bluetooth Speaker, 1 year of <a href="http://www.wolfram.com/development-platform">Wolfram Development Platform</a>, 1 year of <a href="http://www.wolfram.com/solutions/education/students">Wolfram Mathematica Student Edition</a>, 1 year of <a href="http://www.wolframalpha.com/pro/">Wolfram|Alpha Pro</a> and a <a href="https://www.justinmind.com/">Justinmind</a> perpetual license, one for each team member.</p>
+            <p>Google Home, 1 year of <a href="http://www.wolfram.com/development-platform">Wolfram Development Platform</a>, 1 year of <a href="http://www.wolfram.com/solutions/education/students">Wolfram Mathematica Student Edition</a>, 1 year of <a href="http://www.wolframalpha.com/pro/">Wolfram|Alpha Pro</a> and a <a href="https://www.justinmind.com/">Justinmind</a> perpetual license, one for each team member.</p>
           </div>
           <div class="col-sm-4">
             <h3>3rd Place</h3>
-            <p>Syma X5C Explorers 2.4Ghz 6-Axis Gyro RC quadcopter Drone w/ 2MP HD Camera, 1 year of <a href="http://www.wolfram.com/development-platform">Wolfram Development Platform</a>, 1 year of <a href="http://www.wolfram.com/solutions/education/students">Wolfram Mathematica Student Edition</a> and 1 year of <a href="http://www.wolframalpha.com/pro/">Wolfram|Alpha Pro</a>, one for each team member.</p>
+            <p>Bose Soundlink Color Bluetooth Speaker, 1 year of <a href="http://www.wolfram.com/development-platform">Wolfram Development Platform</a>, 1 year of <a href="http://www.wolfram.com/solutions/education/students">Wolfram Mathematica Student Edition</a> and 1 year of <a href="http://www.wolframalpha.com/pro/">Wolfram|Alpha Pro</a>, one for each team member.</p>
           </div>
         </div>
         <div class="row">
@@ -320,8 +324,8 @@
             <p>Partial scholarship to <a href="https://www.makeschool.com/">Make School Summer Academy</a>, Particle Kit and Amazon Echo Dot, one for each team member.</p>
           </div>
           <div class="col-sm-4">
-            <h3>Best <a href="http://get.tech/">.tech</a> Domain Name</h3>
-            <p>$50 Amazon gift card, one for each team member. </p>
+            <h3>Best Web App</h3>
+            <p>Insignia Bluetooth Speaker, one for each team member. </p>
           </div>
         </div>
         <div class="row">
@@ -330,11 +334,11 @@
             <p>1 year subscription to <a href="http://www.wolframalpha.com/pro/">Wolfram|Alpha Pro</a>, one for each team member. First, second and third place winners are not eligible for this award. </p>
           </div>
           <div class="col-sm-4">
-            <h3>Raffle Prizes</h3>
-            <p>One iPad Mini 4, one Roku 3 Streaming Player and two <a href="https://www.justinmind.com/">Justinmind</a> perpetual licenses.</p>
+            <h3>Raffle/Other Prizes</h3>
+            <p>One iPad Mini 4, one Roku 3 Streaming Player, four Syma X5C Explorers 2.4Ghz 6-Axis Gyro RC quadcopter Drones with 2MP HD Camera and two <a href="https://www.justinmind.com/">Justinmind</a> perpetual licenses.</p>
           </div>
           <div class="col-sm-4">
-            <h1>$12,153</h1>
+            <h1>$15,457</h1>
             <p id="cash">Total cash value of prizes</p>
           </div>
         </div>
