--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="rest">
               <h3>San Mateo's first <b>high school</b> hackathon!</h3>
               <p class="lead">January 14-15, 2017 @ <a href='https://www.google.com/maps/place/Informatica+Corporation/@37.5111227,-122.2051784,15z/data=!4m5!3m4!1s0x0:0xc479e59839708591!8m2!3d37.5111227!4d-122.2051784' target='_blank'>Informatica</a></p>
-              <!-- a.btn.btn-default.btn-lg(data-toggle='modal' data-target='#m') Sign up now!--><a href="https://slack.smhacks.com" target="_blank" class="btn btn-default btn-lg">Join our Slack!</a><br><br>
+              <!-- a.btn.btn-default.btn-lg(data-toggle='modal' data-target='#m') Sign up now!--><a href="http://slack.smhacks.com" target="_blank" class="btn btn-default btn-lg">Join our Slack!</a><br><br>
               <p>Attendees must complete <a href="https://www.hellosign.com/s/bf714f6b">this waiver</a> before arriving</p>
             </div>
           </div>
@@ -243,8 +243,8 @@
             <div class="role">Executive Director, Hack Club</div>
           </div>
           <div class="col-sm-4">
-            <div class="name">Tom Preston-Werner</div>
-            <div class="role">Co-Founder, Github</div>
+            <div class="name">Mike McDonald</div>
+            <div class="role">Product Manager, Google</div>
           </div>
           <div class="col-sm-4">
             <div class="name">Oliver Belanger</div>
@@ -276,7 +276,7 @@
           </div>
           <div class="col-sm-4">
             <div class="name">Lizzie Siegle</div>
-            <div class="role">Student, Bryn Mawr College</div>
+            <div class="role">Developer Evangelist, PubNub</div>
           </div>
         </div><br><br>
         <div class="row text-center">
@@ -286,8 +286,8 @@
             <div class="role">Software Engineer, Hewlett Packard</div>
           </div>
           <div class="col-sm-4">
-            <div class="name">Mike McDonald</div>
-            <div class="role">Product Manager, Google</div>
+            <div class="name">Vivian Shen</div>
+            <div class="role">Student, Columbia University</div>
           </div>
         </div>
       </div>
